<resources>
    <string name="app_name">Bhojan</string>
    <string name="title_activity_login">Login</string>
    <string name="signup_message">Sign Up</string>
    <string name="edit_text_username_signup">Username</string>
    <string name="email_hint">Enter your email address</string>
    <string name="signup_button">Sign Up</string>
    <string name="login_text">Already have an account? Log in</string>
    <string name="welcome_message">Welcome to our app!</string>
    <string name="username">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_text">Email</string>

    <string name="forgot_password_text">Forgot Password</string>
    <string name="send_reset_link_button">Reset</string>
    <string name="back_to_login">Back to Login</string>

    <string name="sign_up_text">Do not have an account? Sign up</string>
    <string name="login_button">Login</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <string name="home_fragment_text">Home</string>

    <string name="default_web_client_id">765465470878-7g5rd2gucq4gjjnsrl0t6r43vggi2jt9.apps.googleusercontent.com</string>
    <string name="search_hint">Search..</string>
    <string name="dish_name">Enter Dish Name</string>
    <string name="mealType">Enter Meal Type</string>
    <string name="instructions">Enter Steps to Make in Brief </string>
    <string name="fragment_add_recipe">fragment_add_recipe</string>
    <string name="fragment_profile">fragment_profile</string>
    <string name="facebook_app_id">YOUR_FACEBOOK_APP_ID</string>
    <string name="add_receipe">Add Receipe</string>
    <string name="ingredients"> Enter Ingredients</string>


</resources>
