<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"
        android:alpha="0.3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="144dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_message"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_username_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingTop="8dp"
            android:minHeight="56dp"
            android:autofillHints="username" />

        <EditText
            android:id="@+id/edit_text_email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingTop="8dp"
            android:minHeight="56dp"
            android:autofillHints="email" />

        <EditText
            android:id="@+id/edit_text_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingTop="8dp"
            android:minHeight="56dp"
            android:autofillHints="password" />
        <EditText
            android:id="@+id/edit_text_confirm_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:paddingTop="8dp"
            android:minHeight="56dp"
            android:autofillHints="confirm_password" />


        <Button
            android:id="@+id/button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup_button"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />

        <!-- Add an ID to the "Log in" text view -->
        <TextView
            android:id="@+id/text_view_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="16dp"
            android:text="@string/login_text"
            android:textSize="16sp"
            android:onClick="onLoginClick" />

    </LinearLayout>
</RelativeLayout>