<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_receipe"
        android:textAlignment="center"
        android:textColor="@color/themeColor"
        android:textSize="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/dish_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dish_name"
            android:background="@drawable/edittext_background"
            android:textColorHint="#757575"
            android:textColor="#000000"
            android:padding="10dp"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/meal_type_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mealType"
            android:background="@drawable/edittext_background"
            android:textColorHint="#757575"
            android:textColor="#000000"
            android:padding="10dp"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingredients"
            android:background="@drawable/edittext_background"
            android:textColorHint="#757575"
            android:textColor="#000000"
            android:padding="10dp"
            android:gravity="top|start"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="@string/instructions"
            android:background="@drawable/edittext_background"
            android:textColorHint="#757575"
            android:textColor="#000000"
            android:padding="10dp"
            android:gravity="top|start"
            android:layout_marginBottom="16dp" />

        <ImageView
            android:id="@+id/uploaded_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_broken_image"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_marginBottom="16dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/upload_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:backgroundTint="@color/themeColor"
            android:text="Upload Image"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />


    </RelativeLayout>

</LinearLayout>